2003-09-14  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Fix regex parsing when unusual characters are
	in the filename.

2003-09-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Implement java virtuals.

2003-09-08  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Implement system-xfree86 as a list of provides,
	instead of the system-xfree86-foo packages.

2003-09-08  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: Some cleanup/performance updates to the X11 detect.

2003-09-08  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* VirtPackage.pm: Autodetect X11 (I hope, maybe, Please test/fix)

2003-09-06  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: Allow prebinding whenever the distribution is
	greater than or equal to 10.2-gcc3.3 .

2003-09-06  Dave Morrison <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Temporary change on the "test_10_3" branch: if
	this is run on 10.2, it will set up the 10.2-gcc3.3 distribution.

2003-09-04  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Changed the way Type: perl works, it now can use
	ConfigureParams and makes ue of %c like normal builds, this will
	standarize how perlmodules and normal packages are packaged.

2003-08-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: fix regex for detecting OS X version

2003-08-27  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: fix my mistake of using has_param instead of
	param_boolean like I should have the first time
	* Validate.pm: Added NoPerlType to valid field list and boolean list

2003-08-27  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Added NoPerlTests field to info file for Type: perl
	this will make it easier fo rthe maintainers to keep the pkgs compat
	since you will nolonger need to manually type the configure params to
	remove the make test proceedure.
